rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__processed-profiles-.snap
---
source: src/processors/mod.rs
expression: diff
---
[
    Change {
        path: ".duration_ns",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".organization_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".profile_id",
        change: FormatAdd {
            added: "uuid",
        },
    },
    Change {
        path: ".project_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".received",
        change: FormatAdd {
            added: "int64",
        },
    },
    Change {
        path: ".trace_id",
        change: FormatAdd {
            added: "uuid",
        },
    },
    Change {
        path: ".transaction_id",
        change: FormatAdd {
            added: "uuid",
        },
    },
]
