rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__profiles-call-tree-.snap
---
source: src/processors/mod.rs
expression: diff
---
[
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "end_timestamp",
        },
    },
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "materialization_version",
        },
    },
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "profiling_type",
        },
    },
    Change {
        path: "",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "start_timestamp",
        },
    },
    Change {
        path: ".functions.?",
        change: PropertyAdd {
            lhs_additional_properties: true,
            added: "thread_id",
        },
    },
    Change {
        path: ".functions.?.fingerprint",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".functions.?.self_times_ns.?",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".profile_id",
        change: FormatAdd {
            added: "uuid",
        },
    },
    Change {
        path: ".project_id",
        change: FormatAdd {
            added: "uint64",
        },
    },
    Change {
        path: ".received",
        change: FormatAdd {
            added: "int64",
        },
    },
    Change {
        path: ".retention_days",
        change: FormatAdd {
            added: "uint32",
        },
    },
    Change {
        path: ".timestamp",
        change: FormatAdd {
            added: "uint64",
        },
    },
]
