rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-0.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1702848658.558295,\n  \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": [\n    123, 34, 116, 121, 112, 101, 34, 58, 32, 34, 114, 101, 112, 108, 97, 121,\n    95, 101, 118, 101, 110, 116, 34, 44, 32, 34, 114, 101, 112, 108, 97, 121,\n    95, 105, 100, 34, 58, 32, 34, 56, 51, 52, 102, 51, 49, 52, 99, 97, 97, 101,\n    53, 52, 48, 51, 48, 97, 49, 98, 48, 100, 99, 53, 50, 98, 50, 48, 50, 102,\n    50, 52, 97, 34, 44, 32, 34, 116, 105, 109, 101, 115, 116, 97, 109, 112, 34,\n    58, 32, 49, 55, 48, 50, 56, 52, 56, 54, 53, 56, 46, 53, 53, 56, 50, 57, 53,\n    44, 32, 34, 105, 115, 95, 97, 114, 99, 104, 105, 118, 101, 100, 34, 58, 32,\n    116, 114, 117, 101, 125\n  ]\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "",
    "browser_version": "",
    "click_alt": "",
    "click_aria_label": "",
    "click_class": [],
    "click_component_name": "",
    "click_id": "",
    "click_is_dead": 0,
    "click_is_rage": 0,
    "click_node_id": 0,
    "click_role": "",
    "click_tag": "",
    "click_testid": "",
    "click_text": "",
    "click_title": "",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "00000000-0000-0000-0000-000000000000",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": null,
    "ip_address_v6": null,
    "is_archived": 1,
    "offset": 1,
    "os_name": "",
    "os_version": "",
    "partition": 0,
    "platform": "javascript",
    "project_id": 1,
    "release": "",
    "replay_id": "834f314c-aae5-4030-a1b0-dc52b202f24a",
    "replay_start_timestamp": null,
    "replay_type": "",
    "retention_days": 90,
    "sdk_name": "",
    "sdk_version": "",
    "segment_id": null,
    "session_sample_rate": -1.0,
    "tags.key": [],
    "tags.value": [],
    "timestamp": 1702848658,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "",
    "user_email": "",
    "user_id": "",
    "user_name": "",
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
