rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-2.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1702848658.558295,\n  \"replay_id\": \"834f314caae54030a1b0dc52b202f24a\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": [\n    123, 34, 116, 121, 112, 101, 34, 58, 34, 114, 101, 112, 108, 97, 121, 95,\n    97, 99, 116, 105, 111, 110, 115, 34, 44, 34, 114, 101, 112, 108, 97, 121,\n    95, 105, 100, 34, 58, 34, 56, 51, 52, 102, 51, 49, 52, 99, 97, 97, 101, 53,\n    52, 48, 51, 48, 97, 49, 98, 48, 100, 99, 53, 50, 98, 50, 48, 50, 102, 50,\n    52, 97, 34, 44, 34, 99, 108, 105, 99, 107, 115, 34, 58, 91, 123, 34, 97,\n    108, 116, 34, 58, 34, 83, 117, 98, 109, 105, 116, 32, 70, 111, 114, 109, 34,\n    44, 34, 97, 114, 105, 97, 95, 108, 97, 98, 101, 108, 34, 58, 34, 70, 111,\n    114, 109, 32, 115, 117, 98, 109, 105, 115, 115, 105, 111, 110, 32, 98, 117,\n    116, 116, 111, 110, 34, 44, 34, 99, 108, 97, 115, 115, 34, 58, 91, 34, 104,\n    101, 108, 108, 111, 34, 44, 34, 119, 111, 114, 108, 100, 34, 93, 44, 34, 99,\n    111, 109, 112, 111, 110, 101, 110, 116, 95, 110, 97, 109, 101, 34, 58, 34,\n    83, 105, 103, 110, 85, 112, 70, 111, 114, 109, 34, 44, 34, 101, 118, 101,\n    110, 116, 95, 104, 97, 115, 104, 34, 58, 34, 52, 51, 102, 97, 51, 101, 102,\n    98, 100, 53, 57, 53, 52, 49, 54, 51, 97, 102, 54, 99, 50, 55, 57, 102, 51,\n    102, 53, 48, 56, 56, 99, 57, 34, 44, 34, 105, 100, 34, 58, 34, 105, 100, 34,\n    44, 34, 105, 115, 95, 100, 101, 97, 100, 34, 58, 49, 44, 34, 105, 115, 95,\n    114, 97, 103, 101, 34, 58, 48, 44, 34, 110, 111, 100, 101, 95, 105, 100, 34,\n    58, 49, 44, 34, 114, 111, 108, 101, 34, 58, 34, 98, 117, 116, 116, 111, 110,\n    34, 44, 34, 116, 97, 103, 34, 58, 34, 100, 105, 118, 34, 44, 34, 116, 101,\n    115, 116, 105, 100, 34, 58, 34, 120, 45, 98, 117, 116, 116, 111, 110, 45,\n    115, 117, 98, 109, 105, 116, 45, 102, 111, 114, 109, 34, 44, 34, 116, 101,\n    120, 116, 34, 58, 34, 83, 117, 98, 109, 105, 116, 34, 44, 34, 116, 105, 109,\n    101, 115, 116, 97, 109, 112, 34, 58, 49, 55, 48, 50, 56, 52, 56, 54, 53, 56,\n    46, 53, 53, 56, 50, 57, 53, 44, 34, 116, 105, 116, 108, 101, 34, 58, 34, 67,\n    108, 105, 99, 107, 32, 116, 111, 32, 115, 117, 98, 109, 105, 116, 32, 102,\n    111, 114, 109, 34, 125, 93, 125\n  ]\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "",
    "browser_version": "",
    "click_alt": "Submit Form",
    "click_aria_label": "Form submission button",
    "click_class": [
      "hello",
      "world"
    ],
    "click_component_name": "SignUpForm",
    "click_id": "id",
    "click_is_dead": 1,
    "click_is_rage": 0,
    "click_node_id": 1,
    "click_role": "button",
    "click_tag": "div",
    "click_testid": "x-button-submit-form",
    "click_text": "Submit",
    "click_title": "Click to submit form",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "00000000-0000-0000-0000-000000000000",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": null,
    "ip_address_v6": null,
    "is_archived": 0,
    "offset": 1,
    "os_name": "",
    "os_version": "",
    "partition": 0,
    "platform": "javascript",
    "project_id": 1,
    "release": "",
    "replay_id": "834f314c-aae5-4030-a1b0-dc52b202f24a",
    "replay_start_timestamp": null,
    "replay_type": "",
    "retention_days": 90,
    "sdk_name": "",
    "sdk_version": "",
    "segment_id": null,
    "session_sample_rate": -1.0,
    "tags.key": [],
    "tags.value": [],
    "timestamp": 1702848658,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "",
    "user_email": "",
    "user_id": "",
    "user_name": "",
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
