rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@ingest-replay-events-3.snap
---
source: src/processors/mod.rs
description: "{\n  \"type\": \"replay_event\",\n  \"start_time\": 1687999999.0,\n  \"replay_id\": \"bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb\",\n  \"project_id\": 1,\n  \"retention_days\": 90,\n  \"payload\": [\n    123, 34, 101, 118, 101, 110, 116, 95, 105, 100, 34, 58, 32, 34, 97, 97, 97,\n    97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97,\n    97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 34, 44, 32, 34, 114, 101, 112, 108,\n    97, 121, 95, 105, 100, 34, 58, 32, 34, 98, 98, 98, 98, 98, 98, 98, 98, 98,\n    98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98, 98,\n    98, 98, 98, 98, 34, 44, 32, 34, 114, 101, 112, 108, 97, 121, 95, 116, 121,\n    112, 101, 34, 58, 32, 34, 115, 101, 115, 115, 105, 111, 110, 34, 44, 32, 34,\n    115, 101, 103, 109, 101, 110, 116, 95, 105, 100, 34, 58, 32, 49, 44, 32, 34,\n    116, 105, 109, 101, 115, 116, 97, 109, 112, 34, 58, 32, 49, 54, 56, 55, 57,\n    48, 52, 48, 57, 51, 46, 49, 57, 57, 44, 32, 34, 114, 101, 112, 108, 97, 121,\n    95, 115, 116, 97, 114, 116, 95, 116, 105, 109, 101, 115, 116, 97, 109, 112,\n    34, 58, 32, 49, 54, 56, 55, 57, 48, 52, 48, 56, 55, 46, 48, 56, 52, 44, 32,\n    34, 117, 114, 108, 115, 34, 58, 32, 91, 93, 44, 32, 34, 101, 114, 114, 111,\n    114, 95, 105, 100, 115, 34, 58, 32, 91, 93, 44, 32, 34, 116, 114, 97, 99,\n    101, 95, 105, 100, 115, 34, 58, 32, 91, 93, 44, 32, 34, 99, 111, 110, 116,\n    101, 120, 116, 115, 34, 58, 32, 123, 34, 98, 114, 111, 119, 115, 101, 114,\n    34, 58, 32, 123, 34, 110, 97, 109, 101, 34, 58, 32, 34, 70, 105, 114, 101,\n    102, 111, 120, 34, 44, 32, 34, 118, 101, 114, 115, 105, 111, 110, 34, 58,\n    32, 34, 49, 49, 50, 46, 48, 34, 44, 32, 34, 116, 121, 112, 101, 34, 58, 32,\n    34, 98, 114, 111, 119, 115, 101, 114, 34, 125, 44, 32, 34, 111, 115, 34, 58,\n    32, 123, 34, 110, 97, 109, 101, 34, 58, 32, 34, 87, 105, 110, 100, 111, 119,\n    115, 34, 44, 32, 34, 118, 101, 114, 115, 105, 111, 110, 34, 58, 32, 34, 62,\n    61, 49, 48, 34, 44, 32, 34, 116, 121, 112, 101, 34, 58, 32, 34, 111, 115,\n    34, 125, 125, 44, 32, 34, 112, 108, 97, 116, 102, 111, 114, 109, 34, 58, 32,\n    34, 106, 97, 118, 97, 115, 99, 114, 105, 112, 116, 34, 44, 32, 34, 114, 101,\n    108, 101, 97, 115, 101, 34, 58, 32, 34, 54, 54, 54, 54, 54, 54, 54, 54, 54,\n    54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54,\n    54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 54, 34, 44, 32, 34, 101, 110,\n    118, 105, 114, 111, 110, 109, 101, 110, 116, 34, 58, 32, 34, 112, 114, 111,\n    100, 34, 44, 32, 34, 116, 97, 103, 115, 34, 58, 32, 91, 91, 34, 99, 111,\n    114, 114, 101, 108, 97, 116, 105, 111, 110, 73, 100, 34, 44, 32, 34, 97, 97,\n    97, 97, 97, 97, 97, 97, 45, 97, 97, 97, 97, 45, 97, 97, 97, 97, 45, 97, 97,\n    97, 97, 45, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 97, 34, 93, 93, 44,\n    32, 34, 116, 121, 112, 101, 34, 58, 32, 34, 114, 101, 112, 108, 97, 121, 95,\n    101, 118, 101, 110, 116, 34, 44, 32, 34, 117, 115, 101, 114, 34, 58, 32,\n    123, 34, 101, 109, 97, 105, 108, 34, 58, 32, 34, 116, 101, 115, 116, 64,\n    116, 101, 115, 116, 46, 99, 111, 109, 34, 44, 32, 34, 105, 112, 95, 97, 100,\n    100, 114, 101, 115, 115, 34, 58, 32, 34, 49, 46, 49, 46, 49, 46, 49, 34,\n    125, 44, 32, 34, 114, 101, 113, 117, 101, 115, 116, 34, 58, 32, 123, 34,\n    117, 114, 108, 34, 58, 32, 34, 104, 116, 116, 112, 115, 58, 47, 47, 119,\n    119, 119, 46, 116, 101, 115, 116, 46, 99, 111, 109, 47, 97, 115, 100, 102,\n    34, 44, 32, 34, 104, 101, 97, 100, 101, 114, 115, 34, 58, 32, 91, 91, 34,\n    85, 115, 101, 114, 45, 65, 103, 101, 110, 116, 34, 44, 32, 34, 77, 111, 122,\n    105, 108, 108, 97, 47, 53, 46, 48, 32, 40, 87, 105, 110, 100, 111, 119, 115,\n    32, 78, 84, 32, 49, 48, 46, 48, 59, 32, 87, 105, 110, 54, 52, 59, 32, 120,\n    54, 52, 59, 32, 114, 118, 58, 49, 48, 57, 46, 48, 41, 32, 71, 101, 99, 107,\n    111, 47, 50, 48, 49, 48, 48, 49, 48, 49, 32, 70, 105, 114, 101, 102, 111,\n    120, 47, 49, 49, 50, 46, 48, 34, 93, 93, 125, 44, 32, 34, 115, 100, 107, 34,\n    58, 32, 123, 34, 110, 97, 109, 101, 34, 58, 32, 34, 115, 101, 110, 116, 114,\n    121, 46, 106, 97, 118, 97, 115, 99, 114, 105, 112, 116, 46, 98, 114, 111,\n    119, 115, 101, 114, 34, 44, 32, 34, 118, 101, 114, 115, 105, 111, 110, 34,\n    58, 32, 34, 55, 46, 53, 50, 46, 49, 34, 44, 32, 34, 105, 110, 116, 101, 103,\n    114, 97, 116, 105, 111, 110, 115, 34, 58, 32, 91, 34, 84, 114, 121, 67, 97,\n    116, 99, 104, 34, 44, 32, 34, 66, 114, 101, 97, 100, 99, 114, 117, 109, 98,\n    115, 34, 44, 32, 34, 71, 108, 111, 98, 97, 108, 72, 97, 110, 100, 108, 101,\n    114, 115, 34, 44, 32, 34, 76, 105, 110, 107, 101, 100, 69, 114, 114, 111,\n    114, 115, 34, 44, 32, 34, 68, 101, 100, 117, 112, 101, 34, 44, 32, 34, 72,\n    116, 116, 112, 67, 111, 110, 116, 101, 120, 116, 34, 44, 32, 34, 66, 114,\n    111, 119, 115, 101, 114, 84, 114, 97, 99, 105, 110, 103, 34, 44, 32, 34, 82,\n    101, 112, 108, 97, 121, 34, 93, 125, 125\n  ]\n}\n"
expression: snapshot_payload
---
[
  {
    "browser_name": "Firefox",
    "browser_version": "112.0",
    "click_alt": "",
    "click_aria_label": "",
    "click_class": [],
    "click_component_name": "",
    "click_id": "",
    "click_is_dead": 0,
    "click_is_rage": 0,
    "click_node_id": 0,
    "click_role": "",
    "click_tag": "",
    "click_testid": "",
    "click_text": "",
    "click_title": "",
    "debug_id": "00000000-0000-0000-0000-000000000000",
    "device_brand": "",
    "device_family": "",
    "device_model": "",
    "device_name": "",
    "dist": "",
    "environment": "prod",
    "error_id": "00000000-0000-0000-0000-000000000000",
    "error_ids": [],
    "error_sample_rate": -1.0,
    "event_hash": "<event UUID>",
    "fatal_id": "00000000-0000-0000-0000-000000000000",
    "info_id": "00000000-0000-0000-0000-000000000000",
    "ip_address_v4": "1.1.1.1",
    "ip_address_v6": null,
    "is_archived": 0,
    "offset": 1,
    "os_name": "Windows",
    "os_version": ">=10",
    "partition": 0,
    "platform": "javascript",
    "project_id": 1,
    "release": "6666666666666666666666666666666666666666",
    "replay_id": "bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb",
    "replay_start_timestamp": 1687904087,
    "replay_type": "session",
    "retention_days": 90,
    "sdk_name": "sentry.javascript.browser",
    "sdk_version": "7.52.1",
    "segment_id": 1,
    "session_sample_rate": -1.0,
    "tags.key": [
      "correlationId"
    ],
    "tags.value": [
      "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa"
    ],
    "timestamp": 1687904093,
    "title": null,
    "trace_ids": [],
    "urls": [],
    "user": "test@test.com",
    "user_email": "test@test.com",
    "user_id": "",
    "user_name": "",
    "warning_id": "00000000-0000-0000-0000-000000000000"
  }
]
