rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@outcomes-5.snap
---
source: src/processors/mod.rs
description: "{\n  \"timestamp\": \"2023-03-28T18:50:44.000000Z\",\n  \"org_id\": 1,\n  \"project_id\": 1,\n  \"key_id\": 1,\n  \"outcome\": 1,\n  \"reason\": \"discarded-hash\",\n  \"event_id\": \"4ff942d62f3f4d5db9f53b5a015b5fd9\",\n  \"category\": 1,\n  \"quantity\": 1\n}\n"
expression: snapshot_payload
---
[
  {
    "category": 1,
    "event_id": "4ff942d6-2f3f-4d5d-b9f5-3b5a015b5fd9",
    "key_id": 1,
    "org_id": 1,
    "outcome": 1,
    "project_id": 1,
    "quantity": 1,
    "reason": "discarded-hash",
    "timestamp": 1680029444
  }
]
