rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@profiles-call-tree-0.snap
---
source: src/processors/mod.rs
description: "{\n  \"functions\": [\n    {\n      \"fingerprint\": 10027678537215769000,\n      \"function\": \"CursorWrapper._execute\",\n      \"package\": \"django.db.backends.utils\",\n      \"in_app\": false,\n      \"self_times_ns\": [\n        9968883, 9973116, 9973263, 19933212, 9968120, 9965574, 29905829,\n        129589001, 9967363, 19938577, 39881572, 11600464, 49840810, 19938549,\n        29913753, 9965667, 19945134, 10003759, 9966104, 9964477, 9969739,\n        20809886, 11830791\n      ]\n    },\n    {\n      \"fingerprint\": 888186900786406300,\n      \"function\": \"connect\",\n      \"package\": \"psycopg2\",\n      \"in_app\": false,\n      \"self_times_ns\": [19946707]\n    },\n    {\n      \"fingerprint\": 3734820929566501400,\n      \"function\": \"<module>\",\n      \"package\": \"__main__\",\n      \"in_app\": true,\n      \"self_times_ns\": [10289412]\n    }\n  ],\n  \"environment\": \"production\",\n  \"profile_id\": \"0f2d3a4efaa94234b0eb22b1ee7e69a5\",\n  \"platform\": \"python\",\n  \"project_id\": 1,\n  \"received\": 1687971966,\n  \"retention_days\": 90,\n  \"timestamp\": 1687971965,\n  \"transaction_name\": \"GET /api/1/events\"\n}\n"
expression: snapshot_payload
---
[
  [
    {
      "browser_name": "",
      "depth": 0,
      "device_classification": 0,
      "dist": "",
      "durations": [
        9968883,
        9973116,
        9973263,
        19933212,
        9968120,
        9965574,
        29905829,
        129589001,
        9967363,
        19938577,
        39881572,
        11600464,
        49840810,
        19938549,
        29913753,
        9965667,
        19945134,
        10003759,
        9966104,
        9964477,
        9969739,
        20809886,
        11830791
      ],
      "environment": "production",
      "fingerprint": 10027678537215769000,
      "is_application": 0,
      "materialization_version": 0,
      "name": "CursorWrapper._execute",
      "os_name": "",
      "os_version": "",
      "package": "django.db.backends.utils",
      "parent_fingerprint": 0,
      "path": "",
      "platform": "python",
      "profile_id": "0f2d3a4e-faa9-4234-b0eb-22b1ee7e69a5",
      "project_id": 1,
      "release": null,
      "retention_days": 90,
      "timestamp": 1687971965,
      "transaction_name": "GET /api/1/events",
      "transaction_op": "",
      "transaction_status": 0
    },
    {
      "browser_name": "",
      "depth": 0,
      "device_classification": 0,
      "dist": "",
      "durations": [
        19946707
      ],
      "environment": "production",
      "fingerprint": 888186900786406300,
      "is_application": 0,
      "materialization_version": 0,
      "name": "connect",
      "os_name": "",
      "os_version": "",
      "package": "psycopg2",
      "parent_fingerprint": 0,
      "path": "",
      "platform": "python",
      "profile_id": "0f2d3a4e-faa9-4234-b0eb-22b1ee7e69a5",
      "project_id": 1,
      "release": null,
      "retention_days": 90,
      "timestamp": 1687971965,
      "transaction_name": "GET /api/1/events",
      "transaction_op": "",
      "transaction_status": 0
    },
    {
      "browser_name": "",
      "depth": 0,
      "device_classification": 0,
      "dist": "",
      "durations": [
        10289412
      ],
      "environment": "production",
      "fingerprint": 3734820929566501400,
      "is_application": 1,
      "materialization_version": 0,
      "name": "<module>",
      "os_name": "",
      "os_version": "",
      "package": "__main__",
      "parent_fingerprint": 0,
      "path": "",
      "platform": "python",
      "profile_id": "0f2d3a4e-faa9-4234-b0eb-22b1ee7e69a5",
      "project_id": 1,
      "release": null,
      "retention_days": 90,
      "timestamp": 1687971965,
      "transaction_name": "GET /api/1/events",
      "transaction_op": "",
      "transaction_status": 0
    }
  ]
]
